Another flickering fix

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 /* Fix IE scroll flickering bug */
-.ie html{
+html{
     overflow: hidden;    
 }
 .ie body{
